--- a/.config
+++ b/.config
@@ -7,7 +7,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_sunxi is not set
 # CONFIG_TARGET_apm821xx is not set
 # CONFIG_TARGET_ath25 is not set
-# CONFIG_TARGET_ar71xx=y
+CONFIG_TARGET_ar71xx=y
 # CONFIG_TARGET_ath79 is not set
 # CONFIG_TARGET_bcm27xx is not set
 # CONFIG_TARGET_bcm53xx is not set
@@ -43,11 +43,10 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_omap is not set
 # CONFIG_TARGET_uml is not set
 # CONFIG_TARGET_zynq is not set
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
+# CONFIG_TARGET_x86 is not set
 # CONFIG_TARGET_ar71xx_generic is not set
 # CONFIG_TARGET_ar71xx_tiny is not set
-# CONFIG_TARGET_ar71xx_nand=y
+CONFIG_TARGET_ar71xx_nand=y
 # CONFIG_TARGET_ar71xx_mikrotik is not set
 # CONFIG_TARGET_MULTI_PROFILE is not set
 # CONFIG_TARGET_ar71xx_nand_Default is not set
@@ -59,31 +58,18 @@ CONFIG_TARGET_x86_64=y
 # CONFIG_TARGET_ar71xx_nand_DEVICE_z1 is not set
 # CONFIG_TARGET_ar71xx_nand_DEVICE_R6100 is not set
 # CONFIG_TARGET_ar71xx_nand_DEVICE_WNDR3700V4 is not set
-# CONFIG_TARGET_ar71xx_nand_DEVICE_WNDR4300V1=
+CONFIG_TARGET_ar71xx_nand_DEVICE_WNDR4300V1=y
 # CONFIG_TARGET_ar71xx_nand_DEVICE_wi2a-ac200i is not set
 # CONFIG_TARGET_ar71xx_nand_DEVICE_NBG6716 is not set
-CONFIG_TARGET_x86_64_DEVICE_generic=y
-ONFIG_HAS_SUBTARGETS=y
+CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
-# CONFIG_TARGET_BOARD="ar71xx"
-#CONFIG_TARGET_SUBTARGET="nand"
-#CONFIG_TARGET_PROFILE="DEVICE_WNDR4300V1"
-#CONFIG_TARGET_ARCH_PACKAGES="mips_24kc"
-#CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
-CONFIG_TARGET_BOARD="x86"
-CONFIG_TARGET_SUBTARGET="64"
-CONFIG_TARGET_PROFILE="DEVICE_generic"
-CONFIG_TARGET_ARCH_PACKAGES="x86_64"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
-ONFIG_CPU_TYPE=" "
-CONFIG_LINUX_5_4=y
-CONFIG_DEFAULT_ath10k-firmware-qca9888=y
-CONFIG_DEFAULT_ath10k-firmware-qca988x=y
-CONFIG_DEFAULT_ath10k-firmware-qca9984=y
-CONFIG_DEFAULT_autocore-x86=y
-CONFIG_DEFAULT_automount=y
-CONFIG_DEFAULT_autosamba=y
-
+CONFIG_TARGET_BOARD="ar71xx"
+CONFIG_TARGET_SUBTARGET="nand"
+CONFIG_TARGET_PROFILE="DEVICE_WNDR4300V1"
+CONFIG_TARGET_ARCH_PACKAGES="mips_24kc"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
+CONFIG_CPU_TYPE="24kc"
+CONFIG_LINUX_4_14=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_block-mount=y
 CONFIG_DEFAULT_busybox=y
